--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
-
     <title>Arkaan Sayed</title>
 </head>
 <body>
@@ -69,11 +68,77 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="skills">
-        <div class="skills-logo">
-            <h1 style="color: #fffafa; font-size: 60px;">Skills</h1>
+        <div class="skills">
+            
+                <div class="skills-header">
+                    <h4 style="font-weight: normal;">Skills</h4>
+                </div>
+                <div class="skills-content">
+                    <ul>
+                        <li class="skill-item">
+                            <span>
+                                <img src="./images/html5.svg" alt="">
+                            </span>
+                            <h5>HTML</h5>
+                            <span class="skill-2">
+                                <img src="./images/css.svg" alt="">
+                            </span>
+                            <h5>CSS</h5>
+                        </li>
+                        <li class="skill-item">
+                            <span>
+                                <img src="./images/python.svg" alt="">
+                            </span>
+                            <h5>Python</h5>
+                            <span class="skill-2-dj">
+                                <img src="./images/django.svg" alt="">
+                            </span>
+                            <h5>Django</h5>
+                        </li>
+                        <li class="skill-item">
+                            <span>
+                                <img src="./images/dart.jpeg" alt="">
+                            </span>
+                            <h5>Dart</h5>
+                            <span class="skill-2-js">
+                                <img src="./images/flutter.svg" alt="">
+                            </span>
+                            <h5>Flutter</h5>
+                        </li>
+                        <li class="skill-item">
+                            <span>
+                                <img src="./images/js1.svg" alt="">
+                            </span>
+                            <h5>JS</h5>
+                            <span class="skill-2-njs">
+                                <img src="./images/node-js.svg" alt="">
+                            </span>
+                            <h5>Node.js</h5>
+                        </li>
+                        <li class="skill-item">
+                            <span>
+                                <img src="./images/mongodb.svg" alt="">
+                            </span>
+                            <h5>MongoDb</h5>
+                            <span class="skill-2-fire">
+                                <img src="./images/firebase.svg" alt="">
+                            </span>
+                            <h5>FireBase</h5>
+                        </li>
+                        <li class="skill-item">
+                            <span class="mysql">
+                                <img src="./images/mysql.svg" alt="">
+                            </span>
+                            <h5>MySql</h5>
+                            <span class="skill-2-java">
+                                <img src="./images/java.svg" alt="">
+                            </span>
+                            <h5>Java</h5>
+                        </li>
+                    </ul>
+                </div>
         </div>
     </div>
+    
 </body>
 </html>
