--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <div id="name-container"><li id="hero-name">Arkaan.S</li></div>
                 <li class="list-item"><a href="#my-work">MyWork</a></li>
                 <li class="list-item"><a href="./images/Arkaan Sayed Resume.pdf" download="ArkaanResume.pdf">Resume</a></li>
-                <li class="list-item"><a href="">Contact</a></li>
+                <li class="list-item"><a href="#contact">Contact</a></li>
             </ul>
     </nav>
     <div class="about-me">
@@ -185,7 +185,7 @@
         </div>
         <hr class="underline-div" />
         <div class="row-contact">
-            <div class="contact-me">
+            <div class="contact-me" id="contact">
                 <h1 class="header">Get in Touch</h1>
                 <form id="contact-form" action="https://send.pageclip.co/l1mHqLKHWAOLaiG8qRcgKeFVbhqgO1XV/Portfolio-form"
                     class="pageclip-form" method="post">
