--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
         </div>
         </div>
         <hr class="underline-div" />
-        <div class="row-contact">
+        <!-- <div class="row-contact"> -->
             <div class="contact-me" id="contact">
-                <h1 class="header">Get in Touch</h1>
+                <h1 class="contact-heading">Get in Touch</h1>
                 <form id="contact-form" action="https://send.pageclip.co/l1mHqLKHWAOLaiG8qRcgKeFVbhqgO1XV/Portfolio-form"
                     class="pageclip-form" method="post">
                     <a name=" contact "></a>
@@ -206,7 +206,7 @@
                     <button id="submit-btn" type="submit" class="pageclip-form__submit"><span>Send</span></button>
                 </form>
             </div>
-            <div class="social-links">
+            <!-- <div class="social-links">
                     <div class="skills-header">
                         <h4 style="font-weight: normal;">Follow me on</h4>
                     </div>
@@ -221,8 +221,8 @@
                                 </li>
                     </ul>
                     </div>
-            </div>
-        </div>
+            </div> -->
+        <!-- </div> -->
         
 
     <script src="https://s.pageclip.co/v1/pageclip.js" charset="utf-8"></script>
