--- a/index.html
+++ b/index.html
@@ -139,7 +139,12 @@
     </div>
     <hr class="underline-div"/>
     <div class="projects" id="my-work">
-        <h1 class="header">My Work</h1>
+        <div class="main-header">
+            <h1 class="header">My Work</h1>
+            <button class="github-repo"><a href="https://github.com/arkaanfast" target="_blank">Other Projects</a>&nbsp;<i
+                    class="fab fa-github fa-2x"></i></button>
+        </div>
+        
         <div class="row">
             <div class="project-logo">
 
@@ -156,7 +161,7 @@
                 <p class="project-description">This is a simple chatting application made with flutter.
                 It took around 3 days to develop this application, it currently has features for adding new friends and chatting with them.
                 The Rest api was developed using Node.js with firebase as the backend</p>
-                <button class="source-code"><a href="https://github.com/arkaanfast/GlugChats" target="_blank">Source Code</a>&nbsp;<i class="fab fa-github"></i></button>
+                <button class="source-code"><a href="https://github.com/arkaanfast/GlugChats" target="_blank">Source Code</a>&nbsp;<i class="fab fa-github fa-lg"></i></button>
             </div>
         </div>
     
@@ -179,7 +184,7 @@
                     Each of the levels had automated evaluvation including image processing.
                     </p>
                 <button class="source-code"><a href="https://github.com/arkaanfast/TH" target="_blank">Source
-                        Code</a>&nbsp;<i class="fab fa-github"></i></button>
+                        Code</a>&nbsp;<i class="fab fa-github fa-lg"></i></button>
             </div>
         </div>
         </div>
