--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </h1>
         <ul class="social-container">
           <li>
-            <a href="">
+            <a href="https://www.instagram.com/arkaan_sayed/">
               <svg
                 class="social-icons"
                 xmlns="http://www.w3.org/2000/svg"
@@ -120,7 +120,7 @@
           &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
 
           <li>
-            <a href="">
+            <a href="https://github.com/arkaanfast">
               <svg
                 class="social-icons"
                 xmlns="http://www.w3.org/2000/svg"
@@ -158,7 +158,7 @@
           &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
 
           <li>
-            <a href="">
+            <a href="https://www.linkedin.com/in/arkaan-sayed-891519211/">
               <svg
                 class="social-icons"
                 xmlns="http://www.w3.org/2000/svg"
@@ -416,7 +416,7 @@
                 <h6 class="card-subtitle mb-2 text-muted">3 Months</h6>
                 <p class="card-text">
                   During my time in ailoitte I have worked on multiple projects
-                  using the flutter framework.
+                  using the flutter framework.Was a lead on one of the projects.
                 </p>
               </div>
             </div>
@@ -452,7 +452,7 @@
                 <h6 class="card-subtitle mb-2 text-muted">3 Months</h6>
                 <p class="card-text">
                   Worked as a flutter developer, This was my first internship,
-                  and the worked involved UI creation and API integration.
+                  and the work involved UI creation and API integration.
                 </p>
               </div>
             </div>
