--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               <a class="nav-link" aria-current="page" href="#">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Projects</a>
+              <a class="nav-link" href="#projects">Projects</a>
             </li>
             <!-- <li class="nav-item">
               <a class="nav-link" href="#">Blogs</a>
@@ -268,7 +268,7 @@
       </div>
     </section>
 
-    <section class="hero-my-projects">
+    <section class="hero-my-projects" id="projects">
       <div class="container">
         <h1 class="top-size-font">Selected Projects</h1>
         <div class="row project-row">
