--- a/index.html
+++ b/index.html
@@ -218,22 +218,22 @@
             <p class="text">
               I am also actively involed in
               <span style="color: rgb(255, 255, 255)"
-                >mentoring and teaching my junior and friends in the feild of
+                >mentoring and teaching my juniors and friends in the field of
                 development, mainly App Development and Web development.</span
               >
               I feel its important that they get exposed to the development
-              environment and upgrade their skills while they are still in
+              environment, while upgrading their skills while they are still in
               college.
             </p>
             <p class="text">
               Apart from development, I am also interested and involed in
               <span style="color: rgb(255, 255, 255)">
                 competetive programming (do not compete tho)</span
-              >. I find this field interesting as it helps me imporve my skills
-              as a developer as competetive programming help imporve ones
+              >. I find this field interesting as it helps me improve my skills
+              as a developer as competetive programming help improve ones
               porblem solving ability. So I do practice coding problems during
               my free time. I like to keep myself updated with the curent
-              technology trending in the market.
+              technology trending in the market as well.
             </p>
           </div>
           <div class="col-lg-6 skills text-center">
