Blog added git add .

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#projects">Projects</a>
             </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link" href="#">Blogs</a>
-            </li> -->
+            <li class="nav-item">
+              <a class="nav-link" href="#blogs">Blogs</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -353,7 +353,7 @@
       </div>
     </section>
 
-    <!-- <section class="hero-my-projects">
+    <section class="hero-my-projects" id="blogs">
       <div class="container">
         <h1 class="top-size-font">Blogs</h1>
         <div class="row project-row">
@@ -371,7 +371,7 @@
                   start ? Well this blog is just meant for you then!
                 </p>
                 <a
-                  href="https://veztech.in/pages/blog/blog_pl.html"
+                  href="./blog/programing-languages-blog.html"
                   class="btn btn-primary"
                   >Read Blog</a
                 >
@@ -388,9 +388,7 @@
               <div class="card-body">
                 <h5 class="card-title">Tutorial Trap</h5>
                 <p class="card-text">A heads up to all the beginners.</p>
-                <a
-                  href="https://veztech.in/pages/blog/tt.html"
-                  class="btn btn-primary"
+                <a href="./blog/tutorial-trap.html" class="btn btn-primary"
                   >Read Blog</a
                 >
               </div>
@@ -398,7 +396,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
 
     <section class="hero-my-projects" sytle="margin-bottom: 10rem;">
       <div class="container">
