--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 development, mainly App Development and Web development.</span
               >
               I feel its important that they get exposed to the development
-              environment, while upgrading their skills while they are still in
+              environment, and upgrading their skills while they are still in
               college.
             </p>
             <p class="text">
@@ -230,7 +230,7 @@
               <span style="color: rgb(255, 255, 255)">
                 competetive programming (do not compete tho)</span
               >. I find this field interesting as it helps me improve my skills
-              as a developer as competetive programming help improve ones
+              as a developer. As competetive programming helps improve ones
               porblem solving ability. So I do practice coding problems during
               my free time. I like to keep myself updated with the curent
               technology trending in the market as well.
