fixed  Typo Error #1

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                         to go
                         online. The web app consists of various levels were the
                         users
-                        would have to do certain taska, which involved
+                        would have to do certain tasks, which involved
                         decryption,
                         cracking the puzzle etc. This web app was built using
                         the
